# Book-Reader-

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  defender-for-devops.yml
data/: books.json
data/books.json /data/: sample_data.csv
data/models/: enhanced_recommender.py  init.py
scripts/: setup_database.py
tests/: test_flask_app.py  test_web_app.py
