
#### **pyproject.toml**
```toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-book-recommender"
version = "1.0.0"
description = "AI-powered book recommendation system"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
 {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["ai", "recommendation", "books", "machine-learning", "flask"]
classifiers = [
 "Development Status :: 5 - Production/Stable",
 "Programming Language :: Python :: 3.8",
 "Programming Language :: Python :: 3.9",
 "Programming Language :: Python :: 3.10",
]

[project.dependencies]
flask = "2.3.3"
pandas = "2.0.3"
numpy = "1.24.3"
scikit-learn = "1.2.2"
streamlit = "1.25.0"
transformers = "4.33.4"
torch = "2.0.1"

[project.optional-dependencies]
dev = [
 "pytest==7.4.2",
 "pytest-cov==4.1.0",
 "black==23.7.0",
 "flake8==6.0.0",
 "mypy==1.5.1",
]
